--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.4.2",
     "@nestjs/schematics": "^10.0.0",
+    "@nestjs/swagger": "^7.4.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
@@ -45,6 +46,7 @@
     "prettier": "^3.0.0",
     "prisma": "^5.17.0",
     "prisma-dbml-generator": "^0.12.0",
+    "prisma-generator-nestjs-dto": "^1.1.4",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
