--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/devtools-integration": "^0.1.6",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.17.0",
     "graphql": "^16.9.0",
